# ABC_01

Films/: CMakeLists.txt  cartoon.cpp  cartoon.h  container.cpp  container.h  documentary.cpp  documentary.h  film.cpp  film.h  gaming.cpp  gaming.h  main.cpp  rnd.cpp  rnd.h
results/result01/: output1.txt  output2.txt
results/result02/: output1.txt
results/result03/: output1.txt  output2.txt
results/result04/: output1.txt
tests/test01/: test01.txt
tests/test02/: test02.txt
